--- a/public/index.html
+++ b/public/index.html
@@ -24,13 +24,13 @@
 						<div class="col col-lg-auto"><a class="top-nav__tel" href="tel:88007753016">8 800 775-30-16</a>
 						</div>
 						<div class="col-auto">
-							<div class="top-nav__soc-row row">
+							<div class="soc-row row">
 								<div class="col-auto">
-									<div class="col-auto"><a class="top-nav__soc" href="#"><img loading="lazy" src="img/@2x/wa.png" alt=""/></a>
+									<div class="col-auto"><a class="soc-row__item" href="#"><img loading="lazy" src="img/@2x/wa.png" alt=""/></a>
 									</div>
 								</div>
 								<div class="col-auto">
-									<div class="col-auto"><a class="top-nav__soc" href="#"><img loading="lazy" src="img/@2x/tg.png" alt=""/></a>
+									<div class="col-auto"><a class="soc-row__item" href="#"><img loading="lazy" src="img/@2x/tg.png" alt=""/></a>
 									</div>
 								</div>
 							</div>
@@ -84,11 +84,11 @@
 							<div class="headerBlock__v-row row">
 								<div class="col-4">
 									<div class="headerBlock__v-sub-row row">
-										<div class="col-auto col-lg-12 col-xl-auto">
+										<div class="col-sm-auto col-lg-12 col-xl-auto">
 											<div class="headerBlock__ball"><img loading="lazy" src="img/svg/headerBlock-item-1.svg" alt=""/>
 											</div>
 										</div>
-										<div class="col col-lg-12 col-xl">
+										<div class="col-sm col-lg-12 col-xl">
 											<div class="headerBlock__v-txt">Эксперты с опытом более 12 лет
 											</div>
 										</div>
@@ -96,11 +96,11 @@
 								</div>
 								<div class="col-4">
 									<div class="headerBlock__v-sub-row row">
-										<div class="col-auto col-lg-12 col-xl-auto">
+										<div class="col-sm-auto col-lg-12 col-xl-auto">
 											<div class="headerBlock__ball"><img loading="lazy" src="img/svg/headerBlock-item-2.svg" alt=""/>
 											</div>
 										</div>
-										<div class="col col-lg-12 col-xl">
+										<div class="col-sm col-lg-12 col-xl">
 											<div class="headerBlock__v-txt">Самая дешевая доставка и сборка шкафов
 											</div>
 										</div>
@@ -108,11 +108,11 @@
 								</div>
 								<div class="col-4">
 									<div class="headerBlock__v-sub-row row">
-										<div class="col-auto col-lg-12 col-xl-auto">
+										<div class="col-sm-auto col-lg-12 col-xl-auto">
 											<div class="headerBlock__ball"><img loading="lazy" src="img/@2x/headerBlock-item-3.png" alt=""/>
 											</div>
 										</div>
-										<div class="col col-lg-12 col-xl">
+										<div class="col-sm col-lg-12 col-xl">
 											<div class="headerBlock__v-txt">Официальная гарантия на шкаф 5 лет
 											</div>
 										</div>
@@ -139,7 +139,7 @@
 			<!-- end sQuiz-->
 			<!-- start sCatalog-->
 			<section class="sCatalog sCatalog--js section" id="sCatalog">
-				<div class="container">
+				<div class="sCatalog__container container">
 					<div class="section-title text-center">
 						<h2>Каталог продукции</h2>
 						<p>Виды шкафов</p>
@@ -197,42 +197,221 @@
 				</div>
 			</section>
 			<!-- end sCatalog-->
-			<!--+soc()-->
-			<!--a(href="#modal-call").link-modal-js фывфывфыв-->
-			<!--//- img(src="img/", alt="")-->
-			<!--//- img(src="img/@2x/avif/r.avif", alt="")-->
-			<!--//- img(src="img/@1x/avif/r.avif", alt="")-->
-			<!--+in-c("checkbox", "text")-->
-			<!--//- +pic('f8af7db0d56028b5cc1c7dfc78ec06e8.jpg')-->
-			<!--//- img(src="img/r.avif", alt="")-->
-			<!--img(src="img/@2x/r.jpg", alt="")-->
-			<!---->
-			<!--img(src="img/@2x/webp/r.webp", alt="")-->
-			<!--//- img(src="img/002-book.avif", alt="")-->
-			<!--img(src="img/@2x/002-book.png", alt="")-->
-			<!--img(src="img/@2x/webp/002-book.webp", alt="")-->
-			<!---->
-			<!--+b.tabs--js-->
-			<!--	+e.caption.d-flex-->
-			<!--		+e.btn.btn.btn-success.active  btn  2 1-->
-			<!--		+e.btn.btn.btn-success btn 2  2-->
-			<!--		+e.btn.btn.btn-success btn 2  3-->
-			<!--		+e.btn.btn.btn-success btn  2 4-->
-			<!--	+e.wrap-->
-			<!--		+e.content.active content 1-->
-			<!--		+e.content content 2-->
-			<!--		+e.content content 3-->
-			<!--		+e.content content 4-->
-			<!--	+e.wrap-->
-			<!--		+e.content.active content 1-->
-			<!--		+e.content content 2-->
-			<!--		+e.content content 3-->
-			<!--		+e.content content 4-->
-			<!--+topLine()-->
-			<!--+headerBlock()-->
-			<!--+sForm()-->
-			<!--+sContact()-->
-			<footer class="footer"></footer>
+			<!-- start sWhat-->
+			<section class="sWhat section" id="sWhat">
+				<div class="container">
+					<div class="section-title text-center">
+						<h2>Что вы получаете приобретая шкафы у нас</h2>
+					</div>
+					<div class="sWhat__box">
+						<div class="sWhat__img"><img loading="lazy" src="img/@2x/sWhat-img.jpg" alt=""/>
+						</div>
+						<div class="sWhat__items">
+							<div class="sWhat__item"><span>Дсп 16мм. Кроношпан обработан прочными кромками ПВХ</span>
+							</div>
+							<div class="sWhat__item"><span>Качественная фурнитура и ролики</span>
+							</div>
+							<div class="sWhat__item"><span>Поставка от 1 дня, оплата при получении</span>
+							</div>
+							<div class="sWhat__item"><span>Есть все размеры</span>
+								<div class="sWhat__i-img d-none d-md-block"><img loading="lazy" src="img/@2x/sWhat-1.png" alt=""/>
+								</div>
+							</div>
+							<div class="sWhat__item"><span>Доставка, занос и сборка шкафа дешевле</span>
+								<div class="sWhat__i-img d-none d-md-block"><img loading="lazy" src="img/@2x/sWhat-2.png" alt=""/>
+								</div>
+							</div>
+							<div class="sWhat__item"><span>Гарантия 5 лет и цена производителя</span>
+								<div class="sWhat__i-img d-none d-md-block"><img loading="lazy" src="img/@2x/sWhat-3.png" alt=""/>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="sWhat__bot text-center">
+						<div class="sWhat__b-txt">Кроме того, у нас более 14 критериев качества оценки мебели. Хотите узнать о них больше? Наш специалист поможет Вам сделать правильный выбор!
+						</div><a class="sWhat__btn" href="#">Получить бесплатную консультацию</a>
+					</div>
+				</div>
+			</section>
+			<!-- end sWhat-->
+			<!-- start sVideo-->
+			<section class="sVideo section" id="sVideo">
+				<div class="container">
+					<div class="section-title text-center">
+						<h2><span class="section-title__big">Посмотрите видео от нашего эксперта</span><span class="section-title__sm">какие у нас шкафы и как мы работаем</span>
+						</h2>
+					</div>
+					<div class="sVideo__box">
+						<div class="sVideo__bg-img d-none d-xl-block"><img loading="lazy" src="img/@2x/sVideo-cat.png" alt=""/>
+						</div><a class="sVideo__video-box" href="https://www.youtube.com/watch?v=en6gms6e54Q&amp;list=PLIU76b8Cjem5B3sufBJ_KFTpKkMEvaTQR" data-fancybox="video"><span class="sVideo__v-img"><img loading="lazy" src="img/@2x/sVideo-bg.jpg" alt=""/></span></a>
+					</div>
+					<div class="text-center"><a class="sVideo__btn" href="#">Подобрать свой идеальный шкаф</a>
+					</div>
+				</div>
+			</section>
+			<!-- end sVideo-->
+			<!-- start sForm-->
+			<section class="sForm section" id="sForm">
+				<div class="container">
+					<div class="section-title d-sm-none text-center">
+						<h2>Получите 6 главных советов от эксперта по выбору шкафа прямо сейчас!</h2>
+					</div>
+					<div class="sForm__row row">
+						<div class="col-lg-6 d-none d-sm-block">
+							<div class="sForm__gray-box">
+								<div class="sForm__g-row row">
+									<div class="col-auto align-self-end">
+										<div class="sForm__img"><img loading="lazy" src="img/@2x/sForm-man.png" alt=""/>
+										</div>
+									</div>
+									<div class="col">
+										<h2 class="sForm__title">Получите 6 главных советов от эксперта по выбору шкафа прямо сейчас!
+										</h2>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-6">
+							<div class="sForm__blue-box text-center">
+								<div class="sForm__white-title">Оставьте свои данные и мы отправим Вам  файл «6 главных советов по выбору шкафа”
+								</div>
+								<div class="sForm__inputs">
+									<div class="sForm__input-wrap form-group"><input class="sForm__input form-control" name="text" type="text" placeholder="Введите Ваше имя"/>
+									</div>
+									<!-- +e.input-wrap-->
+									<div class="sForm__input-wrap form-group"><input class="sForm__input form-control" name="tel" type="tel" placeholder="Введите Ваш телефон"/>
+									</div>
+									<!-- +e.input-wrap-->
+								</div>
+								<button class="sForm__btn" type="submit">Получить советы прямо сейчас
+								</button>
+								<div class="sForm__policy">
+									Нажимая на кнопку, вы даете согласие на обработку своих персональных данных и соглашаетесь с
+									<a href="#">Пользовательским соглашением.</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- end sForm-->
+			<!-- start sConditions-->
+			<section class="sConditions section" id="sConditions">
+				<div class="container">
+					<div class="section-title text-center">
+						<h2>Условия доставки, оплаты и рассрочки</h2>
+					</div>
+					<div class="sConditions__box">
+						<div class="sConditions__row row">
+							<div class="col-md-auto">
+								<div class="sConditions__img"><img loading="lazy" src="img/@2x/sConditions.jpg" alt=""/>
+								</div>
+							</div>
+							<div class="col-md">
+								<div class="sConditions__items">
+									<div class="sConditions__item">
+										Мы поможем вам с выбором шкафа выбрав подходящий размер. Обсудим когда лучше
+										<br class="d-none d-xl-block"/>привезти мебель. После этого, с вами свяжется отдел логистики и сделает доставку, занос
+										<br class="d-none d-xl-block"/>и сборку шкафа.
+									</div>
+									<div class="sConditions__item">
+										Вы получите официальный договор с гарантией на шкаф и фурнитуру до 5 лет. Срок
+										<br class="d-none d-xl-block"/>эксплуатации шкафов до 30 лет.
+									</div>
+									<div class="sConditions__item">
+										Оплата производится при получении. Если это требуется, мы поможем оформить
+										<br class="d-none d-xl-block"/>беспроцентную рассрочку и вы сразу можете получить шкаф.
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- end sConditions-->
+			<!-- start sFeedBack-->
+			<section class="sFeedBack section" id="sFeedBack">
+				<div class="container">
+					<div class="section-title text-center">
+						<h2>Отзывы</h2>
+						<p>Мы получили уже более ... отзывов, вот некоторые из них.</p>
+					</div>
+					<div class="sFeedBack__slider-wrap">
+						<div class="swiper-container sFeedBack-slider-js">
+							<div class="swiper-wrapper">
+								<div class="swiper-slide"><a class="sFeedBack__img" href="img/@2x/sFeedback-1.png" data-fancybox="sFeedBack"><img loading="lazy" src="img/@2x/sFeedback-1.png" alt=""/></a>
+								</div>
+								<div class="swiper-slide"><a class="sFeedBack__img" href="img/@2x/sFeedback-1.png" data-fancybox="sFeedBack"><img loading="lazy" src="img/@2x/sFeedback-1.png" alt=""/></a>
+								</div>
+								<div class="swiper-slide"><a class="sFeedBack__img" href="img/@2x/sFeedback-1.png" data-fancybox="sFeedBack"><img loading="lazy" src="img/@2x/sFeedback-1.png" alt=""/></a>
+								</div>
+							</div>
+							<div class="swiper-prev">
+								<svg class="icon icon-arrow-circle-l ">
+									<use xlink:href="img/svg/sprite.svg#arrow-circle-l"></use>
+								</svg>
+							</div>
+							<div class="swiper-next">
+								<svg class="icon icon-arrow-circle-r ">
+									<use xlink:href="img/svg/sprite.svg#arrow-circle-r"></use>
+								</svg>
+							</div>
+						</div>
+					</div>
+					<div class="text-center"><a class="sFeedBack__btn" href="#">Хочу так же</a>
+					</div>
+				</div>
+			</section>
+			<!-- end sFeedBack-->
+			<!-- start sMap-->
+			<div class="sMap" id="sMap">
+				<div class="sMap__map"><script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A44423c4b303501d13ac49a966131f646ccc2e6ffa78d3bc4351ff74c8a15c73b&amp;width=500&amp;height=400&amp;lang=ru_RU&amp;scroll=false"></script>
+				</div>
+			</div>
+			<!-- end sMap-->
+			<footer class="footer">
+				<div class="container">
+					<div class="footer__row row gy-3">
+						<div class="col"><a class="footer__logo" href="/"><img loading="lazy" src="img/@2x/logo-white.png" alt=""/></a>
+							<div class="footer__logo-txt">Продажа корпусных шкафов и шкафов-купе
+							</div>
+							<div class="footer__location">
+								<div class="footer__l-row row">
+									<div class="footer__l-icon-col col-auto">
+										<svg class="icon icon-location ">
+											<use xlink:href="img/svg/sprite.svg#location"></use>
+										</svg>
+									</div>
+									<div class="col">
+										<div class="footer__loc-txt">г.Москва, Ленинградское шоссе 80 стр.1 офис
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-auto">
+							<div class="footer__sub-row row align-items-center gy-3">
+								<div class="col-auto"><a class="footer__tel" href="tel:88007753016">8 800 775-30-16</a>
+								</div>
+								<div class="col-auto">
+									<div class="soc-row row">
+										<div class="col-auto">
+											<div class="col-auto"><a class="soc-row__item" href="#"><img loading="lazy" src="img/@2x/wa.png" alt=""/></a>
+											</div>
+										</div>
+										<div class="col-auto">
+											<div class="col-auto"><a class="soc-row__item" href="#"><img loading="lazy" src="img/@2x/tg.png" alt=""/></a>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="col-auto"><a class="footer__btn" href="#">Перезвоните мне</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</footer>
 		</div>
 		<!--  start modals-->
 		<div class="modal-win" id="modal-call" style="display: none">
